--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,7 +17,11 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 100%;
+  height: 100vh;
   background-color: #c5e4e7;
 }
 
@@ -184,6 +188,17 @@
   gap: 1.5625rem;
 }
 
+.main__bigBoxOutputSectionAmounts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1.875rem;
+}
+
 .main__bigBoxOutputSectionItem {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -238,5 +253,34 @@
 
 .container {
   max-width: 23.5625rem;
+}
+
+@media (min-width: 1440px) {
+  .container {
+    max-width: 56.25rem;
+    margin-bottom: 6.25rem;
+  }
+  .main__bigBox {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .main__bigBoxInputSection {
+    width: 50%;
+  }
+  .main__bigBoxInputSectionInpBox {
+    width: 90%;
+  }
+  .main__bigBoxInputSectionTip {
+    width: 99%;
+  }
+  .main__bigBoxInputSectionTipPresetsItem {
+    width: 25%;
+  }
+  .main__bigBoxOutputSection {
+    width: 50%;
+    gap: 5.75rem;
+  }
 }
 /*# sourceMappingURL=main.css.map */
