--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,4 +2,4 @@
 @import 'abstract/functions';
 @import 'abstract/variables';
 @import 'base/typography';
-@import 'layout/background';
+@import 'components/box';
